# Google-Stock-Forcasting-MLOPS-Pipeline

./: .gitignore  dvc.yaml  error.txt  params.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
notebooks/: google-stock-prediction-with-lstm-test-rmse-2-9593.ipynb
reports/: data.json  params.json
scripts/: register_model.py
src/: __init__.py  dataset.py  features.py  logging_config.py  plots.py
src/data/: data_ingestion.py
src/features/: feature_creation.py  feature_transformation.py
src/model/: model_define.py  test_model.py  train_model.py
src/modeling/: predict.py  train.py
